midi插件：新增读取midi遇到错误处理选项，新增是否导入歌词选项，修复PPQ不为480时音符位置和时长错误，修复导入不带词midi时音符错位的错误。

--- a/csharp/Plugins/Midi/Plugin.Midi.csproj
+++ b/csharp/Plugins/Midi/Plugin.Midi.csproj
@@ -59,6 +59,8 @@
 		<Compile Include="SymbolList.cs"/>
 		<Compile Include="Test.cs"/>
 		<Compile Include="Utils/EncodingUtil.cs"/>
+		<Compile Include="Utils/MidiEventsUtil.cs"/>
+		<Compile Include="ErrorMidiFilePolicyOption.cs"/>
 	</ItemGroup>
 	<ItemGroup>
 		<None Include="packages.config"/>
