midi插件：更换导入带词midi逻辑，新增音符重叠和音符合并工具类

--- a/csharp/Plugins/Midi/Plugin.Midi.csproj
+++ b/csharp/Plugins/Midi/Plugin.Midi.csproj
@@ -60,6 +60,8 @@
 		<Compile Include="Test.cs"/>
 		<Compile Include="Utils/EncodingUtil.cs"/>
 		<Compile Include="Utils/MidiEventsUtil.cs"/>
+		<Compile Include="Utils/NoteMergeUtil.cs"/>
+		<Compile Include="Utils/NoteOverlapUtil.cs"/>
 		<Compile Include="ErrorMidiFilePolicyOption.cs"/>
 	</ItemGroup>
 	<ItemGroup>
