gj插件：修复拍号转换错误的问题，小幅重构

--- a/csharp/Plugins/Gjgj/Plugin.Gjgj.csproj
+++ b/csharp/Plugins/Gjgj/Plugin.Gjgj.csproj
@@ -60,13 +60,14 @@
     <Compile Include="GjgjEncoder.cs" />
     <Compile Include="GjgjModel.cs" />
     <Compile Include="GjgjSupportedPinyin.cs" />
-    <Compile Include="LyricsAndPinyinSettings.cs"/>
-    <Compile Include="Utils\PitchParamUtil.cs"/>
-    <Compile Include="Utils\VolumeParamUtil.cs"/>
-    <Compile Include="Utils\SingerNameUtil.cs"/>
-    <Compile Include="Utils\PronunciationUtil.cs"/>
-    <Compile Include="Utils\TempoUtil.cs"/>
-    <Compile Include="Utils\NoteHeadTagUtil.cs"/>
+    <Compile Include="LyricsAndPinyinSettings.cs" />
+    <Compile Include="Test.cs" />
+    <Compile Include="Utils\PitchParamUtil.cs" />
+    <Compile Include="Utils\VolumeParamUtil.cs" />
+    <Compile Include="Utils\SingerNameUtil.cs" />
+    <Compile Include="Utils\PronunciationUtil.cs" />
+    <Compile Include="Utils\TempoUtil.cs" />
+    <Compile Include="Utils\NoteHeadTagUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
