--- a/csharp/Plugins/Midi/Plugin.Midi.csproj
+++ b/csharp/Plugins/Midi/Plugin.Midi.csproj
@@ -1,101 +1,101 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-	<Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')"/>
-	<PropertyGroup>
-		<Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-		<Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-		<ProjectGuid>{9959258B-F7D7-47EE-823F-54B60BB7935C}</ProjectGuid>
-		<OutputType>Exe</OutputType>
-		<AppDesignerFolder>Properties</AppDesignerFolder>
-		<RootNamespace>FlutyDeer.MidiPlugin</RootNamespace>
-		<AssemblyName>FlutyDeer.MidiPlugin</AssemblyName>
-		<TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
-		<FileAlignment>512</FileAlignment>
-		<Deterministic>true</Deterministic>
-		<NuGetPackageImportStamp/>
-	</PropertyGroup>
-	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-		<DebugSymbols>true</DebugSymbols>
-		<DebugType>full</DebugType>
-		<Optimize>false</Optimize>
-		<OutputPath>bin\Debug\</OutputPath>
-		<DefineConstants>DEBUG;TRACE</DefineConstants>
-		<ErrorReport>prompt</ErrorReport>
-		<WarningLevel>4</WarningLevel>
-	</PropertyGroup>
-	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-		<DebugType>pdbonly</DebugType>
-		<Optimize>true</Optimize>
-		<OutputPath>bin\Release\</OutputPath>
-		<DefineConstants>TRACE</DefineConstants>
-		<ErrorReport>prompt</ErrorReport>
-		<WarningLevel>4</WarningLevel>
-	</PropertyGroup>
-	<ItemGroup>
-		<Reference Include="Melanchall.DryWetMidi, Version=6.0.1.0, Culture=neutral, PublicKeyToken=83d0ffad275219ad, processorArchitecture=MSIL">
-			<HintPath>..\..\packages\Melanchall.DryWetMidi.6.0.1\lib\net45\Melanchall.DryWetMidi.dll</HintPath>
-		</Reference>
-		<Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
-			<HintPath>..\..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
-		</Reference>
-		<Reference Include="NPinyin, Version=0.2.6321.26573, Culture=neutral, processorArchitecture=MSIL">
-			<HintPath>..\..\packages\NPinyin.0.2.6321.26573\lib\net20\NPinyin.dll</HintPath>
-		</Reference>
-		<Reference Include="System"/>
-		<Reference Include="System.Core"/>
-		<Reference Include="System.Xml.Linq"/>
-		<Reference Include="System.Data.DataSetExtensions"/>
-		<Reference Include="Microsoft.CSharp"/>
-		<Reference Include="System.Data"/>
-		<Reference Include="System.Net.Http"/>
-		<Reference Include="System.Xml"/>
-	</ItemGroup>
-	<ItemGroup>
-		<Compile Include="LyricEncodings.cs"/>
-		<Compile Include="MidiConverter.cs"/>
-		<Compile Include="MidiDecoder.cs"/>
-		<Compile Include="MidiEncoder.cs"/>
-		<Compile Include="Properties\AssemblyInfo.cs"/>
-		<Compile Include="SymbolList.cs"/>
-		<Compile Include="Test.cs" />
-		<Compile Include="Utils/EncodingUtil.cs"/>
-		<Compile Include="Utils/MidiEventsUtil.cs"/>
-		<Compile Include="Utils/NoteMergeUtil.cs"/>
-		<Compile Include="Utils/NoteOverlapUtil.cs"/>
-		<Compile Include="Utils/SemivowelPreShiftUtil.cs"/>
-		<Compile Include="ErrorMidiFilePolicyOption.cs"/>
-	</ItemGroup>
-	<ItemGroup>
-		<None Include="packages.config"/>
-	</ItemGroup>
-	<ItemGroup>
-		<ProjectReference Include="..\..\Framework\OpenSvip.Framework.csproj">
-			<Project>{1a025cf4-6ce6-42f9-ad09-16e56d840d95}</Project>
-			<Name>OpenSvip.Framework</Name>
-		</ProjectReference>
-		<ProjectReference Include="..\..\Library\OpenSvip.Library.csproj">
-			<Project>{c0982090-a08e-45b8-953a-6d1750a69cdd}</Project>
-			<Name>OpenSvip.Library</Name>
-		</ProjectReference>
-		<ProjectReference Include="..\..\Model\OpenSvip.Model.csproj">
-			<Project>{f0cf4e57-33f4-4a63-a45f-69727058c24a}</Project>
-			<Name>OpenSvip.Model</Name>
-		</ProjectReference>
-	</ItemGroup>
-	<ItemGroup>
-		<Content Include="Properties.xml">
-			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
-		</Content>
-	</ItemGroup>
-	<Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets"/>
-	<Import Project="..\..\packages\Melanchall.DryWetMidi.6.0.1\build\Melanchall.DryWetMidi.targets" Condition="Exists('..\..\packages\Melanchall.DryWetMidi.6.0.1\build\Melanchall.DryWetMidi.targets')"/>
-	<Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
-		<PropertyGroup>
-			<ErrorText>这台计算机上缺少此项目引用的 NuGet 程序包。使用“NuGet 程序包还原”可下载这些程序包。有关更多信息，请参见 http://go.microsoft.com/fwlink/?LinkID=322105。缺少的文件是 {0}。</ErrorText>
-		</PropertyGroup>
-		<Error Condition="!Exists('..\..\packages\Melanchall.DryWetMidi.6.0.1\build\Melanchall.DryWetMidi.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Melanchall.DryWetMidi.6.0.1\build\Melanchall.DryWetMidi.targets'))"/>
-	</Target>
-	<ItemGroup>
-		<PackageReference Include="Melanchall.DryWetMidi" Version="6.1.0"/>
-	</ItemGroup>
+  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+  <PropertyGroup>
+    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
+    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
+    <ProjectGuid>{9959258B-F7D7-47EE-823F-54B60BB7935C}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>FlutyDeer.MidiPlugin</RootNamespace>
+    <AssemblyName>FlutyDeer.MidiPlugin</AssemblyName>
+    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <FileAlignment>512</FileAlignment>
+    <Deterministic>true</Deterministic>
+    <NuGetPackageImportStamp />
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+    <DebugSymbols>true</DebugSymbols>
+    <DebugType>full</DebugType>
+    <Optimize>false</Optimize>
+    <OutputPath>bin\Debug\</OutputPath>
+    <DefineConstants>DEBUG;TRACE</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
+    <DebugType>pdbonly</DebugType>
+    <Optimize>true</Optimize>
+    <OutputPath>bin\Release\</OutputPath>
+    <DefineConstants>TRACE</DefineConstants>
+    <ErrorReport>prompt</ErrorReport>
+    <WarningLevel>4</WarningLevel>
+  </PropertyGroup>
+  <ItemGroup>
+    <Reference Include="Melanchall.DryWetMidi, Version=6.0.1.0, Culture=neutral, PublicKeyToken=83d0ffad275219ad, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Melanchall.DryWetMidi.6.0.1\lib\net45\Melanchall.DryWetMidi.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
+    <Reference Include="NPinyin, Version=0.2.6321.26573, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\NPinyin.0.2.6321.26573\lib\net20\NPinyin.dll</HintPath>
+    </Reference>
+    <Reference Include="System" />
+    <Reference Include="System.Core" />
+    <Reference Include="System.Xml.Linq" />
+    <Reference Include="System.Data.DataSetExtensions" />
+    <Reference Include="Microsoft.CSharp" />
+    <Reference Include="System.Data" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Include="LyricEncodings.cs" />
+    <Compile Include="MidiConverter.cs" />
+    <Compile Include="MidiDecoder.cs" />
+    <Compile Include="MidiEncoder.cs" />
+    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SymbolList.cs" />
+    <Compile Include="Test.cs" />
+    <Compile Include="ErrorMidiFilePolicyOption.cs" />
+    <Compile Include="Utils\EncodingUtil.cs" />
+    <Compile Include="Utils\MidiEventsUtil.cs" />
+    <Compile Include="Utils\NoteMergeUtil.cs" />
+    <Compile Include="Utils\NoteOverlapUtil.cs" />
+    <Compile Include="Utils\SemivowelPreShiftUtil.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Framework\OpenSvip.Framework.csproj">
+      <Project>{1a025cf4-6ce6-42f9-ad09-16e56d840d95}</Project>
+      <Name>OpenSvip.Framework</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Library\OpenSvip.Library.csproj">
+      <Project>{c0982090-a08e-45b8-953a-6d1750a69cdd}</Project>
+      <Name>OpenSvip.Library</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Model\OpenSvip.Model.csproj">
+      <Project>{f0cf4e57-33f4-4a63-a45f-69727058c24a}</Project>
+      <Name>OpenSvip.Model</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="Properties.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
+  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Import Project="..\..\packages\Melanchall.DryWetMidi.6.0.1\build\Melanchall.DryWetMidi.targets" Condition="Exists('..\..\packages\Melanchall.DryWetMidi.6.0.1\build\Melanchall.DryWetMidi.targets')" />
+  <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
+    <PropertyGroup>
+      <ErrorText>这台计算机上缺少此项目引用的 NuGet 程序包。使用“NuGet 程序包还原”可下载这些程序包。有关更多信息，请参见 http://go.microsoft.com/fwlink/?LinkID=322105。缺少的文件是 {0}。</ErrorText>
+    </PropertyGroup>
+    <Error Condition="!Exists('..\..\packages\Melanchall.DryWetMidi.6.0.1\build\Melanchall.DryWetMidi.targets')" Text="$([System.String]::Format('$(ErrorText)', '..\..\packages\Melanchall.DryWetMidi.6.0.1\build\Melanchall.DryWetMidi.targets'))" />
+  </Target>
+  <ItemGroup>
+    <PackageReference Include="Melanchall.DryWetMidi" Version="6.1.0" />
+  </ItemGroup>
 </Project>
