--- a/csharp/Plugins/Y77/Plugin.Y77.csproj
+++ b/csharp/Plugins/Y77/Plugin.Y77.csproj
@@ -5,10 +5,10 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{3B5FB653-3637-47CE-B3FD-E184419A058E}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Plugin.Y77</RootNamespace>
-    <AssemblyName>Plugin.Y77</AssemblyName>
+    <RootNamespace>FlutyDeer.Y77Plugin</RootNamespace>
+    <AssemblyName>FlutyDeer.Y77Plugin</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -53,6 +53,7 @@
     <Compile Include="Y77Decoder.cs" />
     <Compile Include="Y77Encoder.cs" />
     <Compile Include="Y77Model.cs" />
+    <Compile Include="Test.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
