--- a/csharp/Tests/OpenSvip.Tests.csproj
+++ b/csharp/Tests/OpenSvip.Tests.csproj
@@ -47,9 +47,14 @@
     <ItemGroup>
         <Compile Include="LibraryTests.cs" />
         <Compile Include="PinyinTests.cs" />
+        <Compile Include="PluginTests.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
     <ItemGroup>
+      <ProjectReference Include="..\Framework\OpenSvip.Framework.csproj">
+        <Project>{1a025cf4-6ce6-42f9-ad09-16e56d840d95}</Project>
+        <Name>OpenSvip.Framework</Name>
+      </ProjectReference>
       <ProjectReference Include="..\Library\OpenSvip.Library.csproj">
         <Project>{c0982090-a08e-45b8-953a-6d1750a69cdd}</Project>
         <Name>OpenSvip.Library</Name>
@@ -57,6 +62,14 @@
       <ProjectReference Include="..\Model\OpenSvip.Model.csproj">
         <Project>{f0cf4e57-33f4-4a63-a45f-69727058c24a}</Project>
         <Name>OpenSvip.Model</Name>
+      </ProjectReference>
+      <ProjectReference Include="..\Plugins\JsonSvip\Plugin.JsonSvip.csproj">
+        <Project>{b16a0b55-fef1-41a4-b83f-419a63b07bc1}</Project>
+        <Name>Plugin.JsonSvip</Name>
+      </ProjectReference>
+      <ProjectReference Include="..\Plugins\SynthV\Plugin.SynthV.csproj">
+        <Project>{052f5ea1-52f4-46be-aac3-7cd031e3cdde}</Project>
+        <Name>Plugin.SynthV</Name>
       </ProjectReference>
     </ItemGroup>
     <ItemGroup>
