--- a/csharp/Plugins/SynthV/Plugin.SynthV.csproj
+++ b/csharp/Plugins/SynthV/Plugin.SynthV.csproj
@@ -33,8 +33,8 @@
         <WarningLevel>4</WarningLevel>
     </PropertyGroup>
     <ItemGroup>
-        <Reference Include="NAudio, Version=1.10.0.0, Culture=neutral, PublicKeyToken=null">
-          <HintPath>..\..\.tmp\NAudio.dll</HintPath>
+        <Reference Include="NAudio, Version=1.10.0.0, Culture=neutral, processorArchitecture=MSIL">
+          <HintPath>..\..\packages\NAudio.1.10.0\lib\net35\NAudio.dll</HintPath>
         </Reference>
         <Reference Include="Newtonsoft.Json, Version=13.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed">
           <HintPath>..\..\packages\Newtonsoft.Json.13.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
@@ -45,6 +45,7 @@
         </Reference>
         <Reference Include="System" />
         <Reference Include="System.Core" />
+        <Reference Include="System.Windows.Forms" />
     </ItemGroup>
     <ItemGroup>
         <Compile Include="BreathOptions.cs" />
