gj插件：改用框架的中文转拼音方案，新增“使用旧版的汉字转拼音方案”的选项，修复“仅拼音”下丢弃转音符号的错误，重构Encoder

--- a/csharp/Plugins/Gjgj/Plugin.Gjgj.csproj
+++ b/csharp/Plugins/Gjgj/Plugin.Gjgj.csproj
@@ -59,13 +59,20 @@
     <Compile Include="GjgjDecoder.cs" />
     <Compile Include="GjgjEncoder.cs" />
     <Compile Include="GjgjModel.cs" />
-    <Compile Include="Utils\PinyinUtil.cs" />
+    <Compile Include="Utils\TrackListUtil.cs" />
+    <Compile Include="Utils\NoteListUtil.cs" />
+    <Compile Include="UnsupportedPinyin.cs" />
     <Compile Include="Options\LyricsAndPinyinOption.cs" />
     <Compile Include="Test.cs" />
+    <Compile Include="Utils\PhonemeUtil.cs" />
     <Compile Include="Utils\PitchParamUtil.cs" />
+    <Compile Include="Utils\ProjectSettingUtil.cs" />
+    <Compile Include="Utils\TempoMapUtil.cs" />
+    <Compile Include="Utils\TimeSignatureUtil.cs" />
+    <Compile Include="Utils\TrackUtil.cs" />
     <Compile Include="Utils\VolumeParamUtil.cs" />
     <Compile Include="Utils\SingerNameUtil.cs" />
-    <Compile Include="Utils\PronunciationUtil.cs" />
+    <Compile Include="Utils\PinyinAndLyricUtil.cs" />
     <Compile Include="Utils\TempoUtil.cs" />
     <Compile Include="Utils\NoteHeadTagUtil.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
