--- a/csharp/Plugins/Y77/packages.config
+++ b/csharp/Plugins/Y77/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
   <package id="NPinyin" version="0.2.6321.26573" targetFramework="net472" />
+  <package id="PinYinConverterCore" version="1.0.2" targetFramework="net472" />
 </packages>
