--- a/csharp/GUI/OpenSvip.GUI.csproj
+++ b/csharp/GUI/OpenSvip.GUI.csproj
@@ -96,6 +96,9 @@
     <Compile Include="Dialog\PathManagerDialog.xaml.cs">
       <DependentUpon>PathManagerDialog.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Dialog\PluginDownloadDialog.xaml.cs">
+      <DependentUpon>PluginDownloadDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Dialog\UpdateCheckDialog.xaml.cs">
       <DependentUpon>UpdateCheckDialog.xaml</DependentUpon>
     </Compile>
@@ -112,6 +115,7 @@
     <Compile Include="PluginDetailsBoard.xaml.cs">
       <DependentUpon>PluginDetailsBoard.xaml</DependentUpon>
     </Compile>
+    <Compile Include="PluginInstaller.cs" />
     <Compile Include="RelayCommand.cs" />
     <Compile Include="RelayCommands.cs" />
     <Compile Include="TaskListViewItem.xaml.cs">
@@ -134,6 +138,10 @@
     <Page Include="Dialog\PathManagerDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Dialog\PluginDownloadDialog.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
     </Page>
     <Page Include="Dialog\UpdateCheckDialog.xaml">
       <SubType>Designer</SubType>
@@ -226,7 +234,7 @@
       <Version>4.5.0</Version>
     </PackageReference>
     <PackageReference Include="Panuon.UI.Silver">
-      <Version>2.2.18</Version>
+      <Version>2.2.19</Version>
     </PackageReference>
     <PackageReference Include="Samboy063.Tomlet">
       <Version>3.1.3</Version>
