lrc插件：新增偏移处理方式、歌词换行方式和写入时间轴的输出选项，重构部分代码

--- a/csharp/Plugins/Lyrics/Plugin.Lyrics.csproj
+++ b/csharp/Plugins/Lyrics/Plugin.Lyrics.csproj
@@ -53,6 +53,8 @@
     <Compile Include="Core\Utils\LyricsUtil.cs" />
     <Compile Include="Core\MetaInfo\MetaInfoLine.cs" />
     <Compile Include="Core\MetaInfo\MetaInfoType.cs" />
+    <Compile Include="Options\SplitByOption.cs" />
+    <Compile Include="Options\OffsetPolicyOption.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Test.cs" />
     <Compile Include="Core\WritingSettings.cs" />
