midi插件：修复特定情况下曲速转换错误的问题

--- a/csharp/Plugins/Midi/Plugin.Midi.csproj
+++ b/csharp/Plugins/Midi/Plugin.Midi.csproj
@@ -60,7 +60,9 @@
     <Compile Include="Utils\TimeSignatureListUtil.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Properties.xml" />
+    <Content Include="Properties.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\Framework\OpenSvip.Framework.csproj">
