--- a/csharp/Plugins/Ustx/Plugin.Ustx.csproj
+++ b/csharp/Plugins/Ustx/Plugin.Ustx.csproj
@@ -70,6 +70,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="README.md">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
   <ItemGroup>
     <Content Include="Properties.xml">
