ace 插件：支持导入气声张力力度共振峰，添加相关选项

--- a/csharp/Plugins/Ace/Plugin.Ace.csproj
+++ b/csharp/Plugins/Ace/Plugin.Ace.csproj
@@ -50,6 +50,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AceConverter.cs" />
+    <Compile Include="AceCurveUtils.cs" />
     <Compile Include="AceDecoder.cs" />
     <Compile Include="AceEncoder.cs" />
     <Compile Include="AceModel.cs" />
