Ustx插件：音高导出，伴奏音轨转换，带标点歌词处理

--- a/csharp/Plugins/Ustx/Plugin.Ustx.csproj
+++ b/csharp/Plugins/Ustx/Plugin.Ustx.csproj
@@ -45,6 +45,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="util.cs" />
     <Compile Include="UstxDecoder.cs" />
     <Compile Include="OpenUtau.Core\Util\MusicMath.cs" />
     <Compile Include="OpenUtau.Core\Ustx\UCurve.cs" />
