--- a/csharp/Plugins/Ace/Plugin.Ace.csproj
+++ b/csharp/Plugins/Ace/Plugin.Ace.csproj
@@ -35,6 +35,9 @@
     <StartupObject />
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="LinqStatistics, Version=2.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\..\packages\LinqStatistics.2.3.0\lib\net40\LinqStatistics.dll</HintPath>
+    </Reference>
     <Reference Include="mscorlib" />
     <Reference Include="NAudio, Version=1.10.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\..\packages\NAudio.1.10.0\lib\net35\NAudio.dll</HintPath>
@@ -61,6 +64,7 @@
     <Compile Include="CryptoJsonConverter.cs" />
     <Compile Include="CurveSegmentUtils.cs" />
     <Compile Include="EnumJsonConverter.cs" />
+    <Compile Include="NormalizationArgs.cs" />
     <Compile Include="ParamsJsonConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SingerJsonConverter.cs" />
