--- a/csharp/Plugins/Ace/packages.config
+++ b/csharp/Plugins/Ace/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="LinqStatistics" version="2.3.0" targetFramework="net472" />
   <package id="NAudio" version="1.10.0" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
 </packages>
