--- a/csharp/Json2Diffsinger/Json2DiffSinger.csproj
+++ b/csharp/Json2Diffsinger/Json2DiffSinger.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Console\Arguments.cs" />
     <Compile Include="Core\Converters\ChineseCharactersParamsEncoder.cs" />
     <Compile Include="Core\Models\ChineseCharactersParamsModel.cs" />
+    <Compile Include="Core\Models\AbstractParamsModel.cs" />
     <Compile Include="DiffSingerConverter.cs" />
     <Compile Include="DiffSingerEncoder.cs" />
     <Compile Include="Core\Models\DsNote.cs" />
@@ -65,6 +66,7 @@
     <Compile Include="Utils\NoteNameConvert.cs" />
     <Compile Include="Console\Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Utils\ProjectUtil.cs" />
     <Compile Include="Utils\PinyinUtil.cs" />
   </ItemGroup>
   <ItemGroup>
