vog插件：修复了含空轨道的源工程转换后 Vogen 无法打开的问题。

--- a/csharp/Plugins/Vogen/Plugin.Vogen.csproj
+++ b/csharp/Plugins/Vogen/Plugin.Vogen.csproj
@@ -30,6 +30,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <StartupObject />
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="ICSharpCode.SharpZipLib, Version=0.85.4.369, Culture=neutral, PublicKeyToken=1b03e6acf1164f73, processorArchitecture=MSIL">
       <HintPath>..\..\packages\ICSharpCode.SharpZipLib.dll.0.85.4.369\lib\net20\ICSharpCode.SharpZipLib.dll</HintPath>
@@ -50,6 +53,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Test.cs" />
     <Compile Include="VogenConverter.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="VogenDecoder.cs" />
