--- a/csharp/Plugins/Svip3/Plugin.Svip3.csproj
+++ b/csharp/Plugins/Svip3/Plugin.Svip3.csproj
@@ -84,5 +84,10 @@
       <Name>OpenSvip.Model</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup>
+    <Content Include="Properties.xml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
