--- a/csharp/Plugins/Svip3/Plugin.Svip3.csproj
+++ b/csharp/Plugins/Svip3/Plugin.Svip3.csproj
@@ -18,7 +18,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>C:\Users\fluty\AppData\Local\OpenSvip\Plugins\Svip3\</OutputPath>
+    <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -75,6 +75,9 @@
   <ItemGroup>
     <PackageReference Include="Google.Protobuf">
       <Version>3.21.5</Version>
+    </PackageReference>
+    <PackageReference Include="NAudio">
+      <Version>2.1.0</Version>
     </PackageReference>
     <PackageReference Include="Newtonsoft.Json">
       <Version>13.0.1</Version>
