--- a/csharp/Plugins/Svip3/Plugin.Svip3.csproj
+++ b/csharp/Plugins/Svip3/Plugin.Svip3.csproj
@@ -43,13 +43,24 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Constants.cs" />
+    <Compile Include="Model\Xs3Master.cs" />
+    <Compile Include="Model\Xs3AudioPattern.cs" />
+    <Compile Include="Model\Xs3AudioTrack.cs" />
+    <Compile Include="Model\Xs3Note.cs" />
+    <Compile Include="Model\Xs3ParamPoint.cs" />
+    <Compile Include="Model\Xs3SigingTrack.cs" />
+    <Compile Include="Model\Xs3SingingPattern.cs" />
+    <Compile Include="Model\Xs3Tempo.cs" />
+    <Compile Include="Model\Xs3TimeSignature.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ProtoModel.cs" />
+    <Compile Include="Model\Svip3Model.cs" />
+    <Compile Include="Proto\Any.cs" />
+    <Compile Include="Proto\ProtoBufConvert.cs" />
     <Compile Include="Svip3Converter.cs" />
     <Compile Include="Svip3Decoder.cs" />
     <Compile Include="Svip3Encoder.cs" />
-    <Compile Include="Svip3Model.g.cs" />
     <Compile Include="Utils\AudioTrackUtils.cs" />
     <Compile Include="Utils\CommonParamUtils.cs" />
     <Compile Include="Utils\EditedParamsUtils.cs" />
@@ -73,9 +84,6 @@
     </Content>
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="Google.Protobuf">
-      <Version>3.21.5</Version>
-    </PackageReference>
     <PackageReference Include="NAudio">
       <Version>2.1.0</Version>
     </PackageReference>
