[DiffSinger] 不分段下也重设时间轴

--- a/csharp/Json2Diffsinger/Json2DiffSinger.csproj
+++ b/csharp/Json2Diffsinger/Json2DiffSinger.csproj
@@ -64,6 +64,8 @@
     <Compile Include="Options\PhonemeModeOption.cs" />
     <Compile Include="Core\Models\LowLevel\PhonemeParamsModel.cs" />
     <Compile Include="Options\PitchModeOption.cs" />
+    <Compile Include="Utils\AlgorithmUtils.cs" />
+    <Compile Include="Utils\CurveSegmentUtils.cs" />
     <Compile Include="Utils\LyricUtil.cs" />
     <Compile Include="Utils\NoteListUtils.cs" />
     <Compile Include="Utils\NoteNameConvert.cs" />
