--- a/csharp/Plugins/BinSvip/Plugin.BinSvip.csproj
+++ b/csharp/Plugins/BinSvip/Plugin.BinSvip.csproj
@@ -58,8 +58,13 @@
         <Compile Include="BinarySvipDecoder.cs" />
         <Compile Include="BinarySvipEncoder.cs" />
         <Compile Include="BinarySvipVersions.cs" />
+        <Compile Include="Options\ConvertStrategy.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
         <Compile Include="BinarySvipConst.cs" />
+        <Compile Include="Standalone\NrbfSvipConst.cs" />
+        <Compile Include="Standalone\NrbfSvipConverter.cs" />
+        <Compile Include="Standalone\NrbfSvipDecoder.cs" />
+        <Compile Include="Standalone\NrbfSvipEncoder.cs" />
     </ItemGroup>
     <ItemGroup>
       <None Include="App.config" />
@@ -85,6 +90,10 @@
       <ProjectReference Include="..\..\Model\OpenSvip.Model.csproj">
         <Project>{f0cf4e57-33f4-4a63-a45f-69727058c24a}</Project>
         <Name>OpenSvip.Model</Name>
+      </ProjectReference>
+      <ProjectReference Include="..\..\XSAppModel\XSAppModel.csproj">
+        <Project>{b226ce57-7473-4ce7-8b19-c3a0a22470f4}</Project>
+        <Name>XSAppModel</Name>
       </ProjectReference>
     </ItemGroup>
     <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
