Fix missing reference

--- a/csharp/GUI/App.config
+++ b/csharp/GUI/App.config
@@ -13,6 +13,11 @@
         <assemblyIdentity name="MaterialDesignColors" publicKeyToken="df2a72020bd7962a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.0.5.0" newVersion="2.0.5.0" />
       </dependentAssembly>
+        
+      <dependentAssembly>
+        <assemblyIdentity name="Microsoft.WindowsAPICodePack" publicKeyToken="null" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.1.2.0" newVersion="1.1.2.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
